--- a/renderer/public/index.html
+++ b/renderer/public/index.html
@@ -40,7 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      window.globalEvents = require('electron').ipcRenderer;
+      try { window.globalEvents = require('electron').ipcRenderer; } catch (e) { console.log(e); }
     </script>
   </body>
 </html>
